--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1 class="header">PhotoZoom</h1>
+        <h1 class="header">PhotoZoom.js</h1>
         <p class="header"></p>
 
         <ul>
@@ -24,10 +24,18 @@
           <li class="download"><a class="buttons" href="https://github.com/arunkumarsekar/photoZoom/tarball/master">Download TAR</a></li>
           <li><a class="buttons github" href="https://github.com/arunkumarsekar/photoZoom">View On GitHub</a></li>
         </ul>
-
-        <p class="header">This project is maintained by <a class="header name" href="https://github.com/arunkumarsekar">arunkumarsekar</a></p>
-
-
+		<p>
+        	<h2 style="color:#fff;">Author</h2>
+            <div>
+            	<img class="profilePic" src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-ash4/c21.0.528.528/s160x160/427438_460963380604157_876545968_n.jpg" width="100" height="100" style="float:left;" />
+                <span style="float:left; margin-left:10px; margin-top:4px;"><a href="https://github.com/arunkumarsekar" style="text-decoration:underline;" title="Arun Kumar Sekar">Arun Kumar Sekar</a><br/></span>
+                <p style="float: left; font-size: 11px; margin: 0 0 0 10px;padding: 0;">Author @ <a href="http://9lessons.info">9lessons.info</a></p>
+                <p style="float: left; padding: 0px;">
+                	<a href="https://www.facebook.com/Arunkumar.Sekaar" target="_blank"><img src="images/facebook.png" title="Arun Kumar Sekar" /></a>
+                    <a href="https://twitter.com/duskycode" target="_blank"><img src="images/Twitter.png" title="Arun Kumar Sekar" /></a>
+                </p>
+            </div>
+        </p>
       </header>
       <section>
         <h1>PhotoZoom</h1>
@@ -95,7 +103,7 @@
 <h2>Demo</h2>
       </section>
       <footer>
-        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+        <p></p>
       </footer>
     </div>
     <!--[if !IE]><script>fixScale(document);</script><![endif]-->
