twitter file name changed

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <p style="float: left; font-size: 11px; margin: 0 0 0 10px;padding: 0;">Author @ <a href="http://9lessons.info">9lessons.info</a></p>
                 <p style="float: left; padding: 0px;">
                 	<a href="https://www.facebook.com/Arunkumar.Sekaar" target="_blank"><img src="images/facebook.png" title="Arun Kumar Sekar" /></a>
-                    <a href="https://twitter.com/duskycode" target="_blank"><img src="images/Twitter.png" title="Arun Kumar Sekar" /></a>
+                    <a href="https://twitter.com/duskycode" target="_blank"><img src="images/twitter.png" title="Arun Kumar Sekar" /></a>
                 </p>
             </div>
         </p>
