Social icon fix

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <p class="header">
             <!-- Facebbok Like -->
-
+		<iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Farunkumarsekar.github.com%2FphotoZoom%2F&amp;send=false&amp;layout=button_count&amp;width=450&amp;show_faces=false&amp;font&amp;colorscheme=light&amp;action=like&amp;height=21&amp;appId=173188026140567" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:450px; height:21px;" allowTransparency="true"></iframe>
         <div class="fb-like" data-href="http://arunkumarsekar.github.com/photoZoom/" data-send="false"
              data-layout="button_count" data-width="450" data-show-faces="false"></div>
         <a href="https://twitter.com/share" class="twitter-share-button"
