social icon fix

--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
 
         <p class="header">
             <!-- Facebbok Like -->
-		<iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Farunkumarsekar.github.com%2FphotoZoom%2F&amp;send=false&amp;layout=button_count&amp;width=450&amp;show_faces=false&amp;font&amp;colorscheme=light&amp;action=like&amp;height=21&amp;appId=173188026140567" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:450px; height:21px;" allowTransparency="true"></iframe>
-        <div class="fb-like" data-href="http://arunkumarsekar.github.com/photoZoom/" data-send="false"
-             data-layout="button_count" data-width="450" data-show-faces="false"></div>
+        <div class="fb-like" data-href="http://arunkumarsekar.github.com/photoZoom/" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false" style="float:left;"></div>
         <a href="https://twitter.com/share" class="twitter-share-button"
            data-url="http://arunkumarsekar.github.com/photoZoom/" data-text="PhotoZoom jQuery Plugin"
            data-via="9lessons">Tweet</a>
@@ -35,19 +33,16 @@
                 fjs.parentNode.insertBefore(js, fjs);
             }
         }(document, "script", "twitter-wjs");</script>
-        <!-- Place this tag where you want the +1 button to render. -->
-        <div class="g-plusone" data-href="http://arunkumarsekar.github.com/photoZoom/"></div>
-
+       <!-- Place this tag where you want the +1 button to render. -->
+        <div class="g-plusone" data-size="medium" data-href="http://arunkumarsekar.github.com/photoZoom/"></div>
+        
         <!-- Place this tag after the last +1 button tag. -->
         <script type="text/javascript">
-            (function () {
-                var po = document.createElement('script');
-                po.type = 'text/javascript';
-                po.async = true;
-                po.src = 'https://apis.google.com/js/plusone.js';
-                var s = document.getElementsByTagName('script')[0];
-                s.parentNode.insertBefore(po, s);
-            })();
+          (function() {
+            var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+            po.src = 'https://apis.google.com/js/plusone.js';
+            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+          })();
         </script>
         </p>
 
