social icon fix

--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
 
         <p class="header">
             <!-- Facebbok Like -->
+        <div id="fb-root"></div>
+		<script>(function(d, s, id) {
+          var js, fjs = d.getElementsByTagName(s)[0];
+          if (d.getElementById(id)) return;
+          js = d.createElement(s); js.id = id;
+          js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=173188026140567";
+          fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));</script>
         <div class="fb-like" data-href="http://arunkumarsekar.github.com/photoZoom/" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false" style="float:left;"></div>
         <a href="https://twitter.com/share" class="twitter-share-button"
            data-url="http://arunkumarsekar.github.com/photoZoom/" data-text="PhotoZoom jQuery Plugin"
