--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <section>
         <h1>
         	<span style="position:relative;">PhotoZoom</span>
-        	<div class="socialIcons" style="float:right;font-size:12px;">
+        	<div class="socialIcons" style="float:right;font-size:12px; margin-top:12px;">
                 <!-- Facebbok Like -->
                 <div id="fb-root"></div>
                 <script>(function(d, s, id) {
@@ -62,7 +62,7 @@
                   js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=173188026140567";
                   fjs.parentNode.insertBefore(js, fjs);
                 }(document, 'script', 'facebook-jssdk'));</script>
-                <div class="fb-like" data-href="http://arunkumarsekar.github.com/photoZoom/" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false" style="float:left; margin-right:10px;"></div>
+                <div class="fb-like" data-href="http://arunkumarsekar.github.com/photoZoom/" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false" style="float:left; margin-right:34px;"></div>
                 <a href="https://twitter.com/share" class="twitter-share-button"
                    data-url="http://arunkumarsekar.github.com/photoZoom/" data-text="PhotoZoom jQuery Plugin"
                    data-via="9lessons">Tweet</a>
