--- a/index.html
+++ b/index.html
@@ -15,15 +15,14 @@
 </head>
 <body>
 <div class="wrapper">
+	<a href="http://9lessons.info" title="9lessons" target="_blank"><img src="https://lh4.googleusercontent.com/-CsoNxcX1du0/T2ThAj7NpFI/AAAAAAAAFzc/01djBmjlXWg/s207/new9lessonsx.png" style="margin-left: 10px;" /></a>
     <header>
         <h1 class="header">PhotoZoom.js</h1>
         <p class="header"></p>
         <ul>
-            <li class="download"><a class="buttons" href="https://github.com/arunkumarsekar/photoZoom/zipball/master">Download
-                ZIP</a></li>
-            <li class="download"><a class="buttons" href="https://github.com/arunkumarsekar/photoZoom/tarball/master">Download
-                TAR</a></li>
+            <li class="download"><a class="buttons" href="https://github.com/arunkumarsekar/photoZoom/zipball/master">Download ZIP</a></li>
             <li><a class="buttons github" href="https://github.com/arunkumarsekar/photoZoom">View On GitHub</a></li>
+            <li class="download"><a class="buttons" href="https://github.com/arunkumarsekar/photoZoom/tarball/master">Demo</a></li>            
         </ul>
         <p>
 
@@ -33,18 +32,14 @@
             <img class="profilePic"
                  src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-ash4/c21.0.528.528/s160x160/427438_460963380604157_876545968_n.jpg"
                  width="100" height="100" style="float:left;"/>
-            <span style="float:left; margin-left:10px; margin-top:4px;"><a href="https://github.com/arunkumarsekar"
-                                                                           style="text-decoration:underline;"
-                                                                           title="Arun Kumar Sekar">Arun Kumar Sekar</a><br/></span>
-
-            <p style="float: left; font-size: 11px; margin: 0 0 0 10px;padding: 0;">Author @ <a
-                    href="http://9lessons.info">9lessons.info</a></p>
-
-            <p style="float: left; padding: 0px;">
-                <a href="https://www.facebook.com/Arunkumar.Sekaar" target="_blank"><img src="images/facebook.png"
-                                                                                         title="Arun Kumar Sekar"/></a>
-                <a href="https://twitter.com/duskycode" target="_blank"><img src="images/twitter.png"
-                                                                             title="Arun Kumar Sekar"/></a>
+            <span style="float:left; margin-left:10px; margin-top:4px;">
+            	<a href="https://github.com/arunkumarsekar" style="text-decoration:underline;" title="Arun Kumar Sekar">Arun Kumar Sekar</a>
+                <br/>
+            </span>
+            <p style="float: left; font-size: 11px; margin: 0 0 0 10px;padding: 0;">Author @ <a href="http://9lessons.info">9lessons.info</a></p>
+            <p style="float: left; padding: 0px; margin-left:16px;">
+                <a href="https://www.facebook.com/Arunkumar.Sekaar" target="_blank"><img src="images/facebook.png" title="Arun Kumar Sekar"/></a>
+                <a href="https://twitter.com/duskycode" target="_blank"><img src="images/twitter.png" title="Arun Kumar Sekar"/></a>
             </p>
         </div>
         </p>
@@ -171,8 +166,6 @@
      <span class="p">});</span>
 </pre>
         </div>
-
-        <h2>Demo</h2>
     </section>
     <footer>
         <p></p>
