--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                   js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=173188026140567";
                   fjs.parentNode.insertBefore(js, fjs);
                 }(document, 'script', 'facebook-jssdk'));</script>
-                <div class="fb-like" data-href="http://arunkumarsekar.github.com/photoZoom/" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false" style="float:left; margin-right:34px;"></div>
+                <div class="fb-like" data-href="http://arunkumarsekar.github.com/photoZoom/" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false" style="margin-right:34px;"></div>
                 <a href="https://twitter.com/share" class="twitter-share-button"
                    data-url="http://arunkumarsekar.github.com/photoZoom/" data-text="PhotoZoom jQuery Plugin"
                    data-via="9lessons">Tweet</a>
