--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <ul>
             <li class="download"><a class="buttons" href="https://github.com/arunkumarsekar/photoZoom/zipball/master">Download ZIP</a></li>
             <li><a class="buttons github" href="https://github.com/arunkumarsekar/photoZoom">View On GitHub</a></li>
-            <li class="download"><a class="buttons" href="https://github.com/arunkumarsekar/photoZoom/tarball/master">Demo</a></li>            
+            <li class="download"><a class="buttons" href="http://demos.9lessons.info/photozoom/" target="_blank">Demo</a></li>            
         </ul>
         <p>
 
