--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <h1 class="header">PhotoZoom.js</h1>
         <p class="header"></p>
         <ul>
-            <li class="download"><a class="buttons" href="https://github.com/arunkumarsekar/photoZoom/zipball/master">Download ZIP</a></li>
-            <li><a class="buttons github" href="https://github.com/arunkumarsekar/photoZoom">View On GitHub</a></li>
+            <li class="download greenButton"><a class="buttons" href="https://github.com/arunkumarsekar/photoZoom/zipball/master">Download ZIP</a></li>
+            <li class="blueButton"><a class="buttons github" href="https://github.com/arunkumarsekar/photoZoom">View On GitHub</a></li>
             <li class="download"><a class="buttons" href="http://demos.9lessons.info/photozoom/" target="_blank">Demo</a></li>            
         </ul>
         <p>
@@ -30,7 +30,7 @@
 
         <div>
             <img class="profilePic"
-                 src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-ash4/c21.0.528.528/s160x160/427438_460963380604157_876545968_n.jpg"
+                 src="https://lh6.googleusercontent.com/-dnRx7etahCI/TqUAQrLGN7I/AAAAAAAAFdw/gEDWEUW1HUM/s400/1319393108323_11963.jpg"
                  width="100" height="100" style="float:left;"/>
             <span style="float:left; margin-left:10px; margin-top:4px;">
             	<a href="https://github.com/arunkumarsekar" style="text-decoration:underline;" title="Arun Kumar Sekar">Arun Kumar Sekar</a>
@@ -85,8 +85,7 @@
         </h1>
         
         <div style="clear:both; padding:0px;"></div>
-        <p>Simple, lightweight jQuery plugin to show zoomed view of image based on screen dimensions. It simulates photo
-            zoom for facebook (Chrome extension).</p>
+        <p>A lightweight jQuery plugin for viewing bigger images, this helps you to enrich you web application usablity.</p>
         <h2>Browser Support</h2>
         <ul>
             <li>Internet Explorer 7+</li>
@@ -168,7 +167,7 @@
         </div>
     </section>
     <footer>
-        <p></p>
+        <p>&copy; <a href="http://9lessons.info">9lessons.info</a> &amp; Arun Kumar Sekar</p>
     </footer>
 </div>
 <!--[if !IE]>
